# yandex-station-skill

./: .gitignore  README.md  SKILL.md  package.json  pyproject.toml
scripts/: index.mjs
src/yandex_station_skill/: cli.py  config.py  discovery.py  glagol.py  passport_auth.py  qr_fetch.py  qr_render.py  quasar.py  session.py  tokens.py
